@@ -11,7 +11,8 @@ version 2021c, in progress
 - msplitby(): allow for more flexible syntax
 - printing of bundles: sort members by type and key
 - "print" command: make more flexible, it now includes
-  most of the functionality of "eval"
+  most of the functionality of "eval"; also, bundle elements
+  get sorted
 - "var" command with --lagselect option: add a --minlag
   option to allow testing against 0 lags, or imposing the
   assumption that at least p > 1 lags are needed
@@ -19,7 +20,10 @@ version 2021c, in progress
   number of series to print side by side
 - "foreign" command mechanism: updates to support version
   4.1.0 of R and version 8.0 of Ox Console
-- GUI: introduce experimental "plot collection"
+- "eval" command: introduce "=" as an alias
+- extend the ".=" operator to the "strings .= string" case
+- GUI: introduce experimental features: plot collections and
+  integrated console
 - GUI: add option to use the tab key as the trigger for
   autocompletion in the script editor and console
 - GUI: add command-line options: --new to start a new gretl
